refactor: 收敛行情采集可靠性职责